<resources>
    <string name="app_name">MyAppPortfolio</string>
    <string name="name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="heading_text">My Nanodegree Apps!</string>


    // Buuton Text
    <string name="button_text_1">SPOTIFY STREAMER</string>
    <string name="button_text_2">SCORES APP</string>
    <string name="button_text_3">LIBRARY APP</string>
    <string name="button_text_4">BUILD IT BIGGER</string>
    <string name="button_text_5">XYZ READER</string>
    <string name="button_text_6">CAPSTONE: MY OWN APP</string>

    // Button Press Message
    <string name="button_1_pressed_text">The Button will launch my Spotify Streamer App</string>
    <string name="button_2_pressed_text">The Button will launch my Scores App</string>
    <string name="button_3_pressed_text">The Button will launch my Library App</string>
    <string name="button_4_pressed_text">The Button will launch Build it bigger</string>
    <string name="button_5_pressed_text">The Button will launch my XYZ Reader App</string>
    <string name="button_6_pressed_text">The Button will launch my Capstone App</string>
</resources>
