<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context="awe.devikamehra.myappportfolio.MainActivity">

    <TextView
        android:id="@+id/text1"
        android:text="@string/heading_text"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:id="@+id/button1"
        android:background="@color/blue_button"
        android:text="@string/button_text_1"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content" />

    <Button
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:id="@+id/button2"
        android:background="@color/blue_button"
        android:text="@string/button_text_2"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content" />
    <Button
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:id="@+id/button3"
        android:background="@color/blue_button"
        android:text="@string/button_text_3"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content" />
    <Button
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:id="@+id/button4"
        android:background="@color/blue_button"
        android:text="@string/button_text_4"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content" />
    <Button
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:id="@+id/button5"
        android:background="@color/blue_button"
        android:text="@string/button_text_5"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content" />
    <Button
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:id="@+id/button6"
        android:background="@color/red_button"
        android:text="@string/button_text_6"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content" />

</LinearLayout>
